--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "three": "^0.163.0",
     "three-stdlib": "^2.29.6",
     "zustand": "^4.5.2"
